--- a/styles.css
+++ b/styles.css
@@ -8,33 +8,10 @@ body, html {
     height: 100%;
     overflow-x: hidden; /* remove scroll horizontal se necessário */
 }
-header{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
+header{    
+    display: block;
+    height: 25vh;    
     background: linear-gradient(180deg, rgb(220, 153, 231), rgb(215, 43, 241));
-}
-h1{
-    display: flex;
-    height: 50vh;
-    width: 50vw;
-    color:rgb(245, 235, 104);
-    text-align: center;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-size: 6rem;
-}
-section{
-    display: flex;
-    height: 300vh;
-    width: 100vw;
-    background-color: rgb(215, 43, 241);
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
 }
 .apresentação{
     display: flex;
@@ -43,6 +20,71 @@ section{
     padding-top: 10%;
     align-items: center;    
 }
-h2, p{
+h2, p, h3{
     color: rgb(245, 235, 104);
+}
+.primeira{
+    display: block;    
+    justify-content: center;
+    width: 100%;
+    height: 100%;  
+}
+.naosei{
+    display: flex;
+    flex: wrap;
+    flex-direction: row;
+}
+.cont{
+    text-align: left !important;
+    display: block !important;
+    flex-basis: 0;
+    flex-grow: 1;
+    max-width: 100%;
+    padding: 15px;
+}
+.desc{
+    text-align: center !important;
+    display: block !important;
+    max-width: 100%;
+    flex-basis: 0;
+    flex-grow: 1;
+    padding: 15px;
+}    
+.extra{
+    text-align: right !important;
+    display: block !important;
+    max-width: 100%;
+    flex-basis: 0;
+    flex-grow: 1;
+    padding: 15px;
+}
+.corpo{
+    background-color:rgb(215, 43, 241);
+    width: 100vw;
+    height: 100vh;
+}
+.ultimaLinhaHeader{
+    text-align: center !important;
+    display: block !important;
+    max-width: 100%;
+    flex-basis: 0;
+    flex-grow: 1;
+    padding: 15px;
+    border-top: 1px solid rgb(245, 235, 104);
+}
+.lista1{
+    text-align: center;
+    display: block !important;
+    max-width: 100%;
+    flex-basis: 0;
+    flex-grow: 1;
+    padding: 15px;
+    border-top: 1px solid rgb(245, 235, 104);
+    list-style: none;
+}
+.il{
+    text-align: center !important;
+    display: inline-block;
+    list-style: none;    
+    padding: 10px;
 }
