--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ header{
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    padding-top: 10%;
+    padding-top: 5%;
     align-items: center;    
 }
 h2, p, h3{
@@ -124,4 +124,9 @@ a{
 .logo{
     max-width: fit-content;
     max-height: fit-content;
+}
+.praia{
+    width: 750px;
+    height: auto;
+    padding: 100px;
 }
