--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ h2, p, h3{
     display: block;    
     justify-content: center;
     width: 100%;
-    height: 100%;  
+    height: 200px;  
 }
 .naosei{
     display: flex;
@@ -74,7 +74,7 @@ h2, p, h3{
     max-width: 100%;
     flex-basis: 0;
     flex-grow: 1;
-    padding: 0px;
+    padding: 10px;
     align-items: center;
 }
 .dir2{
@@ -129,4 +129,5 @@ a{
     width: 650px;
     height: auto;
     padding: 70px;
+
 }
