--- a/styles.css
+++ b/styles.css
@@ -9,9 +9,11 @@ body, html {
     overflow-x: hidden; /* remove scroll horizontal se necessário */
 }
 header{    
-    display: block;
-    height: 31vh;    
+    display: block;    
     background: #ffffff;
+    height: 100%
+    max-height:31vh;
+    width:100%;
 }
 .apresentação{
     display: flex;
@@ -33,6 +35,8 @@ h2, p, h3{
     display: flex;
     flex: wrap;
     flex-direction: row;
+    justify-content: center;
+    min-height: 5px:
 }
 .esq{
     text-align: left !important;
@@ -129,5 +133,4 @@ a{
     width: 650px;
     height: auto;
     padding: 70px;
-
 }
