--- a/styles.css
+++ b/styles.css
@@ -91,7 +91,17 @@ h2, p, h3{
     align-items: center;
     justify-content: right;
 }
-
+@media (max-width: 768px){
+    .esq2{
+        display: none;
+    }
+    .dir2{
+        display: none;
+    }
+    .lista1{
+        display:none;
+    }
+}
 .corpo{
     background: linear-gradient(to bottom, #ffc429, #fe4d8a);
     width: 100vw;
@@ -135,5 +145,6 @@ a{
     height: auto;
     padding: 70px;
 }
+
 
 
