--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ h2, p, h3{
     width: 100%;
     height: 100%;  
 }
-.naosei{
+.top-bar{
     display: flex;
     flex: wrap;
     flex-direction: row;
@@ -94,16 +94,7 @@ h2, p, h3{
     justify-content: right;
 }
 @media (max-width: 768px){
-    .esq2{
-        display: none;
-    }
-    .dir2{
-        display: none;
-    }
-    .ultima-barra-de-texto{
-        display: none;
-    }
-    .dir{
+    .d-none{
         display: none;
     }
 }
@@ -160,6 +151,7 @@ a{
     top: 215px;
     padding: 70px;
 }
+
 
 
 
