Refactor styles.css for improved formatting

--- a/styles.css
+++ b/styles.css
@@ -140,17 +140,20 @@ a{
     width: 650px;
     height: auto;
     border: 1px solid #13bac2;
-    border-radius: 10 px;
+    border-radius: 10 px;    
 }
 .texto{
     position: relative;
-    top: 125px;
+    top: 125px;    
 }
 .pad{
     position: relative;
     top: 215px;
-    padding: 70px;
+    padding: 70px;    
+    width: 1000px;
+    height: auto;
 }
+
 
 
 
