--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ body, html {
     width: 100%;
     height: 100%;
     overflow-x: hidden; /* remove scroll horizontal se necessário */
+    color-scheme: light;
 }
 header{    
     display: block;    
@@ -97,6 +98,10 @@ h2, p, h3{
     .d-none{
         display: none;
     }
+@media (prefers-color-scheme: dark) {
+  body {
+    -webkit-filter: none !important;
+    filter: none !important;
 }
 .corpo{
     background: linear-gradient(to bottom, #ffc429, #fe4d8a);
@@ -153,6 +158,7 @@ a{
     width: 1000px;
     height: auto;
 }
+
 
 
 
