--- a/styles.css
+++ b/styles.css
@@ -7,13 +7,12 @@ body, html {
     width: 100%;
     height: 100%;
     overflow-x: hidden; /* remove scroll horizontal se necessário */
+    color-scheme: light only;
 }
 header{    
     display: block;    
-    background: #ffffff;
-    height: 100%
-    max-height:31vh;
-    width:100%;
+    background: #ffffff;    
+    width: 100%;
 }
 .apresentação{
     display: flex;
@@ -38,7 +37,7 @@ h2, p, h3{
     flex: wrap;
     flex-direction: row;
     justify-content: center;
-    min-height: 5px:
+    min-height: 5px;
 }
 .esq{
     text-align: left !important;
@@ -98,6 +97,12 @@ h2, p, h3{
         display: none;
     }
 }
+@media (prefers-color-scheme: dark) {
+    body {
+        -webkit-filter: none !important;
+        filter: none !important; /* Remove filtros automáticos */
+    }
+}
 .corpo{
     background: linear-gradient(to bottom, #ffc429, #fe4d8a);
     width: 100vw;
@@ -153,19 +158,3 @@ a{
     width: 1000px;
     height: auto;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
