--- a/styles.css
+++ b/styles.css
@@ -164,17 +164,19 @@ a{
     padding-top: 15px;
 }  
 .fotobloco{    
-    max-width: 50%;
-    height: auto;
-    padding-right: 15px;    
+    max-width: 100%;
+    max-height: 300px;    
+    padding-right: 15px;
+    overflow: hidden;
 }
 .praiavertical{
     display: block;
     position: relative;  
     width: 100%;
-    height: auto;
+    height: 100%;
     border-radius: 10%;
     border: 1px solid #13bac2;
+    object-fit: cover;
 }
 .fotobloco1{    
     max-width: 50%;
@@ -184,4 +186,5 @@ a{
 .sand{
     color: #f9c773 !important;
 }
+
 
